force-app/main/default/objects/Referral__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Account)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>