force-app/main/default/objects/Referral__c/fields/CF_Notes__c.field-meta.xml
<CustomField>
    <fullName>CF_Notes__c</fullName>
    <label>CF Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>