force-app/main/default/objects/Referral__c/fields/Corporate_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Opportunity</label>
    <referenceTo>Corporate_Finance_Opportunity__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>