force-app/main/default/objects/Referral__c/fields/Created_Corporate_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Created_Corporate_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Corporate Opportunity</label>
    <referenceTo>Corporate_Finance_Opportunity__c</referenceTo>
    <relationshipLabel>Referrals (Created Corporate Opportunity)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>