force-app/main/default/objects/Referral__c/fields/External_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Referral_Name__c</fullName>
    <label>External Referral Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>