force-app/main/default/objects/Referral__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlast</fullName>
            </value>
            <value>
                <fullName>International Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>