force-app/main/default/objects/Referral__c/fields/Opportunity_is_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_is_Corporate__c</fullName>
    <formula>Opportunity__r.RecordType.Name = &apos;Corporate Opportunity&apos;</formula>
    <label>Opportunity is Corporate?</label>
    <type>Checkbox</type>
</CustomField>