force-app/main/default/objects/Referral__c/fields/Private_Equity__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Private Equity</label>
    <referenceTo>Private_Equity__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>