force-app/main/default/objects/Referral__c/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>