force-app/main/default/objects/Referral__c/fields/Referral_Private_Client__c.field-meta.xml
<CustomField>
    <fullName>Referral_Private_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Private Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>