force-app/main/default/objects/Referral__c/fields/Referral_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sub_Type__c</fullName>
    <label>Referral Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Service Line</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
                <isActive>false</isActive>
                <label>Networking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>