force-app/main/default/objects/Referral__c/fields/Referred_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referred Account)</relationshipLabel>
    <relationshipName>Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>