force-app/main/default/objects/Referral__c/fields/Referred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Referred Contact)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>