force-app/main/default/objects/Referral__c/fields/Referred_Private_Equity__c.field-meta.xml
<CustomField>
    <fullName>Referred_Private_Equity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Private Equity</label>
    <referenceTo>Private_Equity__c</referenceTo>
    <relationshipLabel>Referrals (Referred Private Equity)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>